pod/perldelta: Reword #130010 description
I looked at the commits and ticket to clarify this

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -2889,9 +2889,7 @@ Handle C<SvIMMORTALs> in LHS of list assign. [perl #129991]
 
 =item *
 
-[perl #130010] a5540cf breaks texinfo
-
-This involved user-defined Unicode properties.
+Assertion failure with user-defined Unicode-like properties. [perl #130010]
 
 =item *
 
